added admin pages routes and linking

--- a/views/pages/employee/empDashboard.hbs
+++ b/views/pages/employee/empDashboard.hbs
@@ -130,13 +130,13 @@
                                     <div id="adminCollapseOne" class="accordion-collapse collapse show" aria-labelledby="adminHeadingOne" data-bs-parent="#adminFunctionsAccordion">
                                     <div class="accordion-body">
                                         <div class="container-fluid container-wrapper-contents">
-                                            <a href="#">
+                                            <a href="/dashboard/USNVMQD493/createuser">
                                                 <button class="btn button-action-style">
                                                     <img src="/img/icons/general/review.svg" alt="icon">
                                                     <p>Create Guest</p>
                                                 </button>
                                             </a>
-                                            <a href="#">
+                                            <a href="/dashboard/USNVMQD493/createemployee">
                                                 <button class="btn button-action-style">
                                                     <img src="/img/icons/general/review.svg" alt="icon">
                                                     <p>Create Employee</p>
