added admin pages

--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -65,11 +65,11 @@
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/manager/report"> Manager Generate Report Page</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/ssdas"> Admin Dashboard Page</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/users"> Admin View List of Guest Accounts Page</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Admin View/Edit Guest Account Account Page</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Admin Create Guest Account Accounts Page</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Admin View List of Employee Accounts Page</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Admin View/Edit Employee Account Accounts Page</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Admin Create Employee Account Accounts Page</a></li>
-        <li><span style="color:red">[pending]</span><a href=""> Admin Manage Permissions Accounts Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/user/SDF4HN"> Admin View/Edit Guest Account Account Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/createuser"> Admin Create Guest Account Accounts Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/employees"> Admin View List of Employee Accounts Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/USNVMQD493/employee/SDF4HN"> Admin View/Edit Employee Account Accounts Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/createemployee"> Admin Create Employee Account Accounts Page</a></li>
+        <li><span style="color:red">[pending]</span><a href="/dashboard/USNVMQD493/managepermissions"> Admin Manage Permissions Accounts Page</a></li>
     </ul>
 </div>
