--- a/views/pages/employee/admin/createUser.hbs
+++ b/views/pages/employee/admin/createUser.hbs
@@ -12,12 +12,54 @@
             <div class="form-wrap">
                 <div class="card form-card-create">
                     <div class="card-body">
-                       
+                        <div class="form-group">
+                            <label for="firstName">First Name</label>
+                            <input type="text" class="form-control" id="firstName" name="firstName" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="lastName">Last Name</label>
+                            <input type="text" class="form-control" id="lastName" name="lastName" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="mobileNumber">Mobile Number</label>
+                            <input type="tel" class="form-control" id="mobileNumber" name="mobileNumber">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+
+                        {{#if readOnly}}
+                            <div>
+                                <p>User Photo</p>
+                                <img src="/img/placeholder/hotel_california_logo.png" alt="userPhoto">
+                            </div>
+                        {{/if}}
+
+                        {{#unless readOnly}}
+                            <div class="form-group">
+                                <label for="userPhoto">User Photo</label>
+                                <input type="file" class="form-control-file" id="userPhoto" name="userPhoto" {{#if readOnly}}disabled{{/if}}>
+                                <small class="form-text text-muted">Upload a single user photo.</small>
+                            </div>
+                        {{/unless}}
                     </div>
                 </div>
                 <div class="card form-card-create">
                     <div class="card-body">
-                        
+                        <div class="form-group">
+                            <label for="address">Address</label>
+                            <input type="text" class="form-control" id="address" name="address" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="city">City</label>
+                            <input type="text" class="form-control" id="city" name="city" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="postalCode">Postal Code</label>
+                            <input type="text" class="form-control" id="postalCode" name="postalCode" required>
+                        </div>
+                        {{> formContents/_countrySelect selectId="inputCountry" selectName="country" selectTitle="Country" required=true readOnly=readOnly}}
                     </div>
                 </div>
             </div>
