--- a/views/partials/_search.hbs
+++ b/views/partials/_search.hbs
@@ -2,7 +2,7 @@
 <div class="view-reservation-search-bar-container">
     <form class="view-reservation-search-bar" action="{{searchControlUrl}}" method="get">
         <div class="form-group search-field-container">
-            <input type="text" class="form-control search-field" id="search" name="reservationNumber" placeholder="{{#if placeholder}}{{placeholder}}{{/if}}{{#unless placeholder}}Search for...{{/unless}}" required>
+            <input type="text" class="form-control search-field shadow-none" id="search" name="reservationNumber" placeholder="{{#if placeholder}}{{placeholder}}{{/if}}{{#unless placeholder}}Search for...{{/unless}}" required>
         </div>
         <button type="submit" class="search-submit-button">
             <img src="/img/icons/search/search_icon.svg" alt="search icon">
@@ -16,7 +16,7 @@
         {{#if searchOptionsList}}
             {{#each searchOptionsList}}
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="filter" id="{{this.id}}" value="lastName">
+                    <input class="form-check-input" type="radio" name="filter" id="{{this.id}}" value="{{this.id}}">
                     <label class="form-check-label check-style" for="{{this.id}}">
                         {{this.label}}
                     </label>
