--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -70,6 +70,6 @@
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/employees"> Admin View List of Employee Accounts Page</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/USNVMQD493/employee/SDF4HN"> Admin View/Edit Employee Account Accounts Page</a></li>
         <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/createemployee"> Admin Create Employee Account Accounts Page</a></li>
-        <li><span style="color:red">[pending]</span><a href="/dashboard/USNVMQD493/managepermissions"> Admin Manage Permissions Accounts Page</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/USNVMQD493/createemployee"><a href="/dashboard/USNVMQD493/managepermissions"> Admin Manage Permissions Accounts Page</a></li>
     </ul>
 </div>
