--- a/views/partials/_tableRowDisplay.hbs
+++ b/views/partials/_tableRowDisplay.hbs
@@ -9,8 +9,21 @@
                     <td><button type="button" class="btn button-secondary {{getClassName this.isButton.classNames ../this this.resultName}}"
                         {{#if this.isButton.buttonActions}}
                             {{#if ../this.variableName}}
-                                onclick="{{getClassName this.isButton.buttonActions ../this this.resultName}}('{{getProperty ../this ../this.variableName}}')"
+                                {{#unless ../this.sendvariableAsJSON}}
+                                    onclick="{{getClassName this.isButton.buttonActions ../this this.resultName}}('{{getProperty ../this ../this.variableName}}')"
+                                {{/unless}}    
+                                {{#if ../this.sendvariableAsJSON}}
+                                    {{#equal ../this.sendvariableAsJSON true}}
+                                        onclick="{{getClassName this.isButton.buttonActions ../this this.resultName}}('{{getPropertyAsJSON ../this ../this.variableName}}')"
+                                    {{/equal}}  
+                                    {{#equal ../this.sendvariableAsJSON false}}
+                                        onclick="{{getClassName this.isButton.buttonActions ../this this.resultName}}('{{getProperty ../this ../this.variableName}}')"
+                                    {{/equal}}  
+                                {{/if}}    
                             {{/if}}
+                            {{#unless ../this.variableName}}
+                                onclick="{{getClassName this.isButton.buttonActions ../this this.resultName}}()"
+                            {{/unless}}
                         {{/if}}
                     >
                         {{getProperty ../this this.resultName}}
