added room occupancy view

--- a/views/pages/employee/empDashboard.hbs
+++ b/views/pages/employee/empDashboard.hbs
@@ -23,6 +23,16 @@
                         <div class="dashboard-main-mid">
                             <p class="dash-p-mid-style">3 Guests are checking in today</p>
                             <a class="dash-a-mid-style" href="/dashboard/staff/checkin">VIEW LIST</a>
+
+                            <div class="container-fluid container-wrapper-contents">
+                                <a href="/dashboard/staff/occupancy">
+                                    <button class="btn button-action-style">
+                                        <img src="/img/icons/general/review.svg" alt="icon">
+                                        <p>View Room Occupancy</p>
+                                    </button>
+                                </a>
+                            </div>
+
                         </div>
                     {{/equal}}
                     {{#equal sidebarData.employeeType "manager"}}
@@ -107,6 +117,12 @@
                                                 <button class="btn button-action-style">
                                                     <img src="/img/icons/general/review.svg" alt="icon">
                                                     <p>View Inquiries</p>
+                                                </button>
+                                            </a>
+                                            <a href="/dashboard/staff/occupancy">
+                                                <button class="btn button-action-style">
+                                                    <img src="/img/icons/general/review.svg" alt="icon">
+                                                    <p>View Room Occupancy</p>
                                                 </button>
                                             </a>
                                         </div>
@@ -213,6 +229,12 @@
                                                 <button class="btn button-action-style">
                                                     <img src="/img/icons/general/review.svg" alt="icon">
                                                     <p>Create Promotion</p>
+                                                </button>
+                                            </a>
+                                            <a href="/dashboard/staff/occupancy">
+                                                <button class="btn button-action-style">
+                                                    <img src="/img/icons/general/review.svg" alt="icon">
+                                                    <p>View Room Occupancy</p>
                                                 </button>
                                             </a>
                                         </div>
