added the remaining pages

--- a/views/pages/public/devlinks.hbs
+++ b/views/pages/public/devlinks.hbs
@@ -32,9 +32,8 @@
         <li>🔗✅🔗<span style="color:orange">[InProgress]</span><a href="/restaurant">Restaurant Page</a></li>
         <li>🔗✅🔗<span style="color:orange">[InProgress]</span><a href="/faqsPolicies">Hotel Faqs & Policies</a></li>
         <li>Other pages</li>
-        <li><span style="color:red">[pending]</span><a href="/dashboard/guest/upload-photo">Guest Upload Photo</a></li>
-        <li><span style="color:red">[pending]</span><a href="">Forgot Password</a></li>
-        <li><span style="color:red">[pending]</span><a href="">Forgot Password Verify</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/dashboard/guest/upload-photo">Guest Upload Photo</a></li>
+        <li><span style="color:orange">[DONE(html layout), PENDING(css,javascript)]</span><a href="/forgotpassword">Forgot Password</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/verifyaccount"> Verify Acc Via Create Acc </a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/createaccount"> Create Account via Checkout</a></li>
         <li>[DONE, TESTED & REVIEWED]<a href="/checkout/verifyaccount"> Verify Account via Checkout</a></li>
