--- a/views/partials/employee/_emploginform.hbs
+++ b/views/partials/employee/_emploginform.hbs
@@ -15,7 +15,7 @@
         <input type="password" name="password"  class="form-control" id="{{type}}Password" placeholder="Password">
     </div>
     <div class="portal-forgot-pass-div">
-        <a href="/portal?forgot">Forgot your password?</a>
+        <a href="/forgotpassword">Forgot your password?</a>
     </div>
     {{!-- <button type="submit" class="btn btn-primary">Submit</button> --}}
     <button id="{{type}}Submit" type="button" class="btn btn-primary">Submit</button>
