--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,7 +28,7 @@
             <input type="password" class="form-control custom-input" id="loginPassword" placeholder="Enter your password">
           </div>
           <div class="mb-3 text-center">
-            <a href="#" class="forgot-password">Forgot Password?</a>
+            <a href="/forgotpassword" class="forgot-password">Forgot Password?</a>
           </div>
 
 		  <button type="button" id="loginButton" class="btn custom-login-btn d-flex justify-content-center align-items-center">
